# ESP32-Single-Channel-Gateway-TTN

./: README.md
02_vscode/single_channel_gw/: Makefile  clean_build.sh  clean_esp32.sh  sdkconfig
02_vscode/single_channel_gw/components/ArduinoJson/: CMakeLists.txt
02_vscode/single_channel_gw/components/TtnGw/: CMakeLists.txt  LoRaModemSX127x.cpp  LoRaModemSX127x.h  LoRaModemSX127xHandler.cpp  LoRaModemSX127xHandler.h  OneShotTimerInterrupt.cpp  OneShotTimerInterrupt.h  TtnGwDataTypes.cpp  TtnGwDataTypes.h  TtnGwSerialUiConfig.cpp  TtnGwSerialUiConfig.h  TtnGwTime.cpp  TtnGwTime.h  TtnGwUdpHandler.cpp  TtnGwUdpHandler.h  TtnGwUdpParser.cpp  TtnGwUdpParser.h
02_vscode/single_channel_gw/components/arduino_base64/: CMakeLists.txt  arduino_base64.cpp  arduino_base64.hpp
02_vscode/single_channel_gw/components/ezTime/: CMakeLists.txt  ezTime.h
02_vscode/single_channel_gw/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
