idf_component_register(SRCS  "main.cpp"
                    INCLUDE_DIRS    "." 
                                    "../components/arduino-esp32"
                                    "../components/ArduinoJson"
                                    "../components/TtnGw"
                                    "../components/arduino_base64"
                                    "../components/ezTime"
                    )
